--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,9 @@ img {
   padding-right: 24px;
   padding-top: 20px;
   padding-bottom: 20px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 .portfolio-hero-list-item {
   width: 370px;
@@ -371,6 +374,9 @@ img {
   display: block;
   margin-bottom: 20px;
   color: #ffffff;
+}
+.footer-list-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer-adress-link {
